--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@types/yandex-maps": "^2.1.29",
     "naive-ui": "^2.34.3",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.0",
+    "vue-yandex-maps": "^1.0.8",
     "vuetify": "^3.1.4"
   },
   "devDependencies": {
