--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "sokol",
   "version": "0.0.1",
-  "description": "A Quasar Project",
-  "productName": "Quasar App",
+  "description": "Охранная организация сокол",
+  "productName": "сокол-охрана",
   "author": "Valery",
   "private": true,
   "scripts": {
