--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.0",
     "vue-yandex-maps": "^1.0.8",
+    "vue-carousel-3d": "^1.0.1",
     "vuetify": "^3.1.4"
   },
   "devDependencies": {
